Update PDS Data District Level.ipynb

--- a/PDS Data District Level.ipynb
+++ b/PDS Data District Level.ipynb
@@ -5743,7 +5743,7 @@
     {
      "data": {
       "text/plain": [
-       "'D:/idp_datasets/IDP_ISB/PDS/pds_dfso_monthly_28_01_2021.csv'"
+       "'D:/PDS/pds_dfso_monthly.csv'"
       ]
      },
      "execution_count": 6,
@@ -5752,7 +5752,7 @@
     }
    ],
    "source": [
-    "filename = f'D:/idp_datasets/IDP_ISB/PDS/pds_dfso_monthly_{date.today().strftime(\"%d_%m_%Y\")}.csv'\n",
+    "filename = f'D:/PDS/pds_dfso_monthly_{date.today().strftime(\"%d_%m_%Y\")}.csv'\n",
     "filename"
    ]
   },
